# odin

./: README.md  install_dev.sh  pyproject.toml  requirements.txt
app/: ask.py  example_chat.json  example_openai_chat.json  requirements.txt  service_interface.py  utils.py
app/plugins/: bedrock.py  openai.py
odin_cli/: cli.py  service_interface.py  tools.py  utils.py
odin_cli/commands/: config.py  run.py
odin_cli/plugins/: bedrock.py  openai.py
