[project]
name = "odin-cli"
version = "0.0.1"
authors = [
  { name="Cliff Pyles", email="cliff@cliffpyles.com" },
]
description = "An app for interacting with AI services"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cliffpyles/odin"
Issues = "https://github.com/cliffpyles/odin/issues"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"